--- a/main.html
+++ b/main.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Development Tutorial Cards</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="cards-wrapper">
+        <div class="card">
+            <div class="card-overlay">
+                <span class="card-number">01</span>
+                <p class="card-date">6 Oct 2022</p>
+                <h1>HTML Syntax</h1>
+                <p>The syntax of a language is how it works. How to actually write it. Learn HTML syntax...</p>
+                <span class="card-tag">HTML</span>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-overlay">
+                <span class="card-number">02</span>
+                <p class="card-date">9 Jan 2023</p>
+                <h1>Basic types of HTML tags</h1>
+                <p>Learn about some of the most common HTML tags...</p>
+                <span class="card-tag">HTML</span>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-overlay">
+                <span class="card-number">03</span>
+                <p class="card-date">14 Dec 2022</p>
+                <h1>Links, images and about file paths</h1>
+                <p>Learn how to use links and images along with file paths...</p>
+                <span class="card-tag">HTML</span>
+            </div>
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
-
 </html>
